--- a/APINetCoreDemo/APINetCoreDemo.csproj
+++ b/APINetCoreDemo/APINetCoreDemo.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>6884c28c-dc83-4331-9234-9b39ea4f1319</UserSecretsId>
   </PropertyGroup>
 
 
