--- a/APINetCoreDemo/appsettings.json
+++ b/APINetCoreDemo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySqlConnection": {
+    "MySqlConnectionStriong": "Server=localhost;DataBase=api_udemy;Uid=root;Pwd=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
