Last update aula87

--- a/APINetCoreDemo/appsettings.json
+++ b/APINetCoreDemo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySqlConnection": {
-    "MySqlConnectionStriong": "Server=localhost;DataBase=api_udemy;Uid=root;Pwd=root"
+    "MySqlConnectionStriong": "Server=localhost;DataBase=api_udemy;Uid=root;Pwd=root;SsqlMode=none"
   },
   "Logging": {
     "LogLevel": {
