--- a/APINetCoreDemo/APINetCoreDemo.csproj
+++ b/APINetCoreDemo/APINetCoreDemo.csproj
@@ -6,8 +6,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Evolve" Version="2.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.21" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.2" />
   </ItemGroup>
 
-
+  <ItemGroup>
+    <Folder Include="db\dataset\" />
+  </ItemGroup>
+  	<Target Name="ChangeAliasesOfStrongNameAssemblies" BeforeTargets="FindReferenceAssembliesForReference;ResolveReferences">
+	  <ItemGroup>
+		<ReferencePath Condition="'%(FileName)' == 'MySqlConnector'">
+			<Aliases>MySqlConnectorAlias</Aliases>
+		</ReferencePath>
+	  </ItemGroup>
+	</Target>
 </Project>
