--- a/APINetCoreDemo/Properties/launchSettings.json
+++ b/APINetCoreDemo/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "persons",
+      "launchUrl": "v1/persons",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "APINetCoreDemo": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "persons",
+      "launchUrl": "v1/persons",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
